15 Jul 2018
fix: images cleanup
update: composer require PHP >= 7.2.0
update: increase font size slightly
cleanup: general code cleanup, phpstorm
update: database files
fix: all like buttons
add: additional like buttons
update: all comments displayed in same manner
add: imdb info in requests and offers
add: cleanup script to download anf optimize images if using image proxy
remove: poster from image background
add: try/catch ImageProxy
fix: time sort in tvmaze.php
update: tmdb image sizes for better quality
add: min-width to index page blocks titles
rename: pm_system messages
update: pager_new.php pager_functions.php to return limits for fluentPDO
remove: manage_likes table

13 Jul 2018
fix: make action 'default' usercp.php

12 Jul 2018
fix: check if dir exists before traverse it log_viewer.php

11 Jul 2018
fix: background not displaying details.php
fix: query non existent table
add: TMDb Top 100 Movies
add: images table to store image urls
update: API get images to store urls
update: get_body_image to get from images table and get poster or background depending on screen orientation
update: normalize relative urls in js files
remove: Atlantis from countries signup.php invite_signup.php
fix: error on valid empty post contents takesignup.php
remove: optimize/blur gifs ImageProxy.php
fix: check if empty beofre use details.php
update: README innodb_autoinc_lock_mode = 0
fix: undefined $count admin/bans.php
fix: search by category browse.php
fix: missing require thanks.php
fix: missing require bookmark.php

9 Jul 2018
fix: uptime time display
fix: mybonus.php sort order
fix: crazyhour global message

8 Jul 2018
fix: get empty image get_body_image()
fix: avatar max-width
fix: update user birthday when birthday not set
fix: get random image get_body_image()
update: delete get_body_image() cache on new upload
fix: url getting deleted when edit takeedit.php
update: remove banner and background when torrent poster is changed